# edaingaround

./: PACKS_SUMMARY.json  README.md  chat.ipynb  cuties.cc  hello.py  plan.md  pyproject.toml  test.json  test.jsonl  universal_grader.py
instructions/: instr_0000.json  instr_0001.json  instr_0003.json  instr_0004.json  instr_0005.json  instr_0006.json  instr_0007.json  instr_0008.json  instr_0009.json  instr_0010.json  instr_0011.json  instr_0013.json  instr_0014.json  instr_0016.json  instr_0019.json  instr_0020.json  instr_0023.json  instr_0025.json  instr_0028.json  instr_0029.json  instr_0031.json  instr_0035.json  instr_0037.json  instr_0038.json  instr_0039.json  instr_0040.json  instr_0041.json  instr_0042.json  instr_0043.json  instr_0044.json  instr_0045.json  instr_0048.json  instr_0049.json  instr_0051.json  instr_0055.json  instr_0056.json  instr_0060.json  instr_0061.json  instr_0062.json  instr_0063.json  (+400 more)
mini_code/: README.md  code_0001.json  code_0003.json  code_0011.json  code_0014.json  code_0015.json  code_0016.json  code_0020.json  code_0022.json  code_0026.json  code_0029.json  code_0030.json  code_0033.json  code_0034.json  code_0036.json  code_0042.json  code_0046.json  code_0049.json  code_0050.json  code_0053.json  code_0055.json  code_0058.json  code_0059.json  code_0061.json  code_0067.json  code_0068.json  code_0073.json  code_0075.json  code_0078.json  code_0081.json  code_0088.json  code_0089.json  code_0092.json  code_0094.json  code_0095.json  code_0097.json  code_0101.json  code_0105.json  code_0109.json  code_0112.json  (+376 more)
(+4330 files in other folders)
