[project]
name = "edaingaround"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "mpld3>=0.5.11",
    "nbconvert>=7.16.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
    "tiktoken>=0.11.0",
]
